--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -92,3 +92,15 @@
   font-size: 18px;
   font-family: "Montserrat", sans-serif;
 }
+
+.sticky__header {
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  box-shadow: 3px 3px 8px -3px #ddd;
+  background: #fff;
+}
